# sinker

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: test.yml  tests.yml
dependencies/: CMakeLists.txt
dependencies/sha256/: CMakeLists.txt  sha256.cpp  sha256sum.cpp
dependencies/sha256/include/: sha256.hpp
docs/: CMakeLists.txt  Doxyfile
docs/source/: cmakeintegration.rst  conf.py  index.rst  requirements.txt  sinkercompiler.rst  sinkerdsl.rst  sinkerruntimelibrary.rst  sinkerscript.rst
docs/source/_static/css/: custom.css
sinker/: CMakeLists.txt
sinker/include/sinker/: sinker.hpp  sinker.tpp
sinker/src/: parser.cpp  parser.yy  sinker.cpp
sinkerc/: CMakeLists.txt  main.cpp
tests/: test.cpp
